# Q4-Hackathon-0-Personal-AI-Employee

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md  orchestrator.py  pyproject.toml
.claude/: settings.local.json
.claude/commands/: approve-pending.md  cloud-status.md  linkedin-post.md  morning-briefing.md  odoo-query.md  process-inbox.md  ralph-loop.md  run-orchestrator.md  social-post.md  start-watcher.md  sync-vault.md  update-dashboard.md  weekly-audit.md
.linkedin_session/: Local State
.linkedin_session/Default/: Cookies  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Web Data
.linkedin_session/GrShaderCache/: data_1  index
.linkedin_session/GraphiteDawnCache/: data_1  index
.obsidian/: workspace.json
.whatsapp_session/: Local State  first_party_sets.db
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
mcp_servers/: __init__.py  email_server.py  odoo_server.py  social_media_server.py
scripts/: cloud_agent.py  cloud_pm2.config.js  demo_platinum.sh  merge_signals.py  odoo_cloud_setup.sh  odoo_docker_compose.yml  pm2.config.js  ralph_wiggum_hook.py  setup_cloud.sh  setup_cron.sh  setup_cron_gold.sh  setup_cron_platinum.sh  vault_sync.py  watchdog.py  weekly_audit.py
watchers/: __init__.py  base_watcher.py  facebook_watcher.py  filesystem_watcher.py  gmail_watcher.py  instagram_watcher.py  linkedin_watcher.py  requirements.txt  retry_handler.py  twitter_watcher.py  whatsapp_watcher.py
(+5473 files in other folders)
